# moba_server

./: README.md
moba_server/: .gitignore  README.md  build.sh  clean.sh
moba_server/BCenterServer/: BCenterServer.cpp  BCenterServer.vcxproj  BCenterServer.vcxproj.filters  CBCenterLogic.cpp  CBCenterLogic.h  CBattleManager.cpp  CBattleManager.h  CBattleSession.cpp  CBattleSession.h  CConstConfig.cpp  CConstConfig.h  CCrossSession.cpp  CCrossSession.h  CHttpFunc.cpp  CHttpFunc.h  CRoom.cpp  CRoom.h  CRoomManager.cpp  CRoomManager.h  CServerNetface.cpp  CServerNetface.h
moba_server/BattleServer/: BattleServer.cpp  BattleServer.vcxproj  BattleServer.vcxproj.filters  CBattleLogic.cpp  CBattleLogic.h  CBattleUser.cpp  CBattleUser.h  CConstConfig.cpp  CConstConfig.h  CCrossNetFace.cpp  CCrossNetFace.h  CLogManager.cpp  CLogManager.h  CLogNetface.cpp  CLogNetface.h  CRoom.cpp  CRoom.h  CRoomManager.cpp  CRoomManager.h  CRoomThread.cpp  CRoomThread.h  CTcpLogic.cpp  CTcpLogic.h  CTcpSess.cpp  CTcpSess.h  CTcpUdpLogic.cpp  CTcpUdpLogic.h  CUdpLogic.cpp  CUdpLogic.h  CUdpSess.cpp  CUdpSess.h  CUserManager.cpp  CUserManager.h
moba_server/Config/: const_config.xml
moba_server/Config/game_config/: game_const_config.xls  game_const_config.xml  hero_config.xls  item_config.xls  item_config.xml  make_xml.bat  user_config.xls
moba_server/Config/proto/: make_protobuf.bat  msg_common.proto  msg_module.proto  msg_module_battle.proto  msg_module_hero.proto  msg_module_http.proto  msg_module_login.proto  msg_module_mail.proto  msg_module_ranker.proto  msg_module_serverbattle.proto  msg_module_servercommon.proto  msg_module_serverdb.proto  msg_module_serverinner.proto  result_code.proto  server_common.proto
moba_server/Config/table/: generator.bat  global_ranker_table.xml  user_card_table.xml  user_info_table.xml  user_item_table.xml  user_mail_table.xml
moba_server/CrossServer/: CConstConfig.cpp  CConstConfig.h  CCrossLogic.cpp  CCrossLogic.h  CDbInstance.cpp  CDbInstance.h  CGameSession.cpp  CGameSession.h  CServerNetface.cpp  CServerNetface.h  CSessionMgr.cpp  CSessionMgr.h  CUserCacheInfo.h  CrossServer.cpp  CrossServer.vcxproj  CrossServer.vcxproj.filters
moba_server/DBServer/: BaseInfoDBPkg.cpp  BaseInfoDBPkg.h  CBaseInfoDBPkg.cpp  CBaseInfoDBPkg.h  CConstConfig.cpp  CConstConfig.h  CDBInstance.cpp  CDBInstance.h  CDBLogic.cpp  CDBLogic.h  CDBProxy.cpp  CDBProxy.h  CDBUser.cpp  CDBUser.h  CDBUserManager.cpp  CDBUserManager.h  CGameSession.cpp  CGameSession.h  CServerNetface.cpp  CServerNetface.h  DBServer.cpp  DBServer.vcxproj  DBServer.vcxproj.filters
moba_server/Docx/: ~$代码结构分析.docx  ~$环境配置.docx  ~WRL0003.tmp  代码结构分析.docx  环境配置.docx  网关网络.vsdx
moba_server/GameAdmin/: manage.py
moba_server/GameApi/: CAccount.py  CAioMysqlClient.py  CGroup.py  CGroupListHandler.py  CLogger.py  CLoginHandler.py  CMysqlClient.py  CMysqlPool.py  CRegisterHandler.py  CSdk.py  CSessionHandler.py  CTestHandler.py  Config.py  Main.py  Singleton.py  Utility.py
moba_server/GameServer/: CBaseInfoPackage.cpp  CBaseInfoPackage.h  CConstConfig.cpp  CConstConfig.h  CCrossNetface.cpp  CCrossNetface.h  CDBNetface.cpp  CDBNetface.h  CErrorProcessor.h  CGameConstConfig.cpp  CGameConstConfig.h  CGameLogic.cpp  CGameLogic.h  CGateSession.cpp  CGateSession.h  CHeroConfig.cpp  CHeroConfig.h  CHeroProcessor.cpp  CHeroProcessor.h  CItemConfig.cpp  CItemConfig.h  CLoginProcessor.cpp  CLoginProcessor.h  CMakeLists.txt  CModuleProFactory.cpp  CModuleProFactory.h  CProcessorBase.cpp  CProcessorBase.h  CRankerInfo.h  CRankerMgr.h  CServerNetface.cpp  CServerNetface.h  CSysNetface.cpp  CSysNetface.h  CUser.cpp  CUser.h  CUserConfig.cpp  CUserConfig.h  CUserManager.cpp  CUserManager.h  (+5 more)
moba_server/GateServer/: CConstConfig.cpp  CConstConfig.h  CGameNetface.cpp  CGameNetface.h  CGateLogic.cpp  CGateLogic.h  CMakeLists.txt  CServerNetface.cpp  CServerNetface.h  CSysNetface.cpp  CSysNetface.h  CUser.cpp  CUser.h  CUserManager.cpp  CUserManager.h  GateServer.cpp  GateServer.vcxproj  GateServer.vcxproj.filters  PlayerProxy.cpp  PlayerProxy.h
moba_server/Libs/: build.sh
moba_server/Libs/network/: CMakeLists.txt  cir_queue.h  cir_queue_cas.cpp  cir_queue_cas.h  cir_queue_gen.cpp  cir_queue_gen.h  cir_queue_mul.cpp  cir_queue_mul.h  event_thread.cpp  event_thread.h  io_thread.cpp  io_thread.h  listen_thread.cpp  listen_thread.h  logic_interface.cpp  logic_interface.h  logic_thread.cpp  logic_thread.h  msg_interface.cpp  msg_interface.h  msg_parser.cpp  msg_parser.h  msg_queue.cpp  msg_queue.h  net_connection.cpp  net_connection.h  net_define.h  net_opt.cpp  net_opt.h  network.vcxproj  network.vcxproj.filters  reconn_event.cpp  reconn_event.h  socket_pair_wrapper.cpp  socket_pair_wrapper.h  tcp_client.cpp  tcp_client.h  thread_dispatcher.cpp  thread_dispatcher.h  time_event.cpp  (+3 more)
moba_server/Libs/platform/: CBattleCommon.h  CMakeLists.txt  call_stack.cpp  call_stack.h  coredump_x.cpp  coredump_x.h  coutclr.cpp  coutclr.h  db_mgr.cpp  db_mgr.h  db_struct.cpp  db_struct.h  db_thread.h  dtype.h  en_de_code.cpp  en_de_code.h  func_proc.cpp  func_proc.h  game_item.h  global_define.h  http_client.cpp  http_client.h  http_mgr.cpp  http_mgr.h  http_param.cpp  http_param.h  http_request.cpp  http_request.h  id_alloctor.h  ikcp.cpp  ikcp.h  json_hpp.h  log_mgr.cpp  log_mgr.h  lru_hashmap.h  map_pool.h  map_pools.h  md5.cpp  md5.h  mongo_base.cpp  (+35 more)
moba_server/Libs/tinyxml/: CMakeLists.txt  tinyxml.vcxproj  tinyxml.vcxproj.filters
moba_server/LogServer/: CConstConfig.cpp  CConstConfig.h  CDbInstance.cpp  CDbInstance.h  CLogLogic.cpp  CLogLogic.h  CServerNetface.cpp  CServerNetface.h  CServerSession.cpp  CServerSession.h  LogServer.cpp  LogServer.vcxproj  LogServer.vcxproj.filters
moba_server/SysServer/: CConstConfig.cpp  CConstConfig.h  CDbInstance.h  CDbIntance.cpp  CMakeLists.txt  CServerNetface.cpp  CServerNetface.h  CSession.cpp  CSession.h  CSysLogic.cpp  CSysLogic.h  CUser.cpp  CUser.h  CUserManager.cpp  CUserManager.h  SysHttpFunc.cpp  SysHttpFunc.h  SysServer.cpp  SysServer.vcxproj  SysServer.vcxproj.filters
(+263 files in other folders)
